test: use correct list import